adding book quotes and pics

--- a/_drafts/book-recs.html
+++ b/_drafts/book-recs.html
@@ -28,20 +28,25 @@ description: "Objectively, the best books to read, ever"
 </p>
 
 <h3>
-    1. <i>A Little Life</i>, Hanya Yanigahara 
+    1. <i>A Little Life</i>, Hanya Yanagihara 
 </h3>
 
 <div class="text-center">
+    <img src="../assets/images/blog/blog-post/book-recs/a-little-life.jpg" alt="cover of A Little Life">
     <p>
-        Genre: <i>fiction, contemporary</i>
+        Genre: <i>contemporary fiction</i>
     </p>
 </div>
 
 <figure>
     <blockquote cite="">
         <p>
-            "Friendship, companionship: it so often defied logic, so often eluded the deserving, so often settled itself 
-            on the odd, the bad, the peculiar, the damaged."
+            "On and on they stare, until Jude's face becomes almost meaningless as a face to him: 
+            it is a series of colors, of planes, of shapes that have been arranged in such a way to give
+            other people pleasure, but to give its owner nothing. He doesn't know what he is going to do. 
+            He is dizzy with what he has heard, with comprehending the enormity of his misconceptions, with stretching 
+            his understanding past what is imaginable, with the knowledge that all of his carefully 
+            maintained edifices are now destroyed beyond repair."
         </p>
     </blockquote>
 </figure>
@@ -60,8 +65,9 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
+    <img src="../assets/images/blog/blog-post/book-recs/geb.jpg" alt="cover of Godel, Escher, and Bach">
     <p>
-        Genre: <i>nonfiction, philosophy, mathematics</i>
+        Genre: <i>nonfiction, philosophy, mathematics, cognitive science, consciousness</i>
     </p>
 </div>
 
@@ -70,6 +76,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
+    <img src="../assets/images/blog/blog-post/book-recs/speaker-for-the-dead.jpeg" alt="cover of Speaker for the Dead">
     <p>
         Genre: <i>science fiction</i>
     </p>
@@ -80,8 +87,10 @@ description: "Objectively, the best books to read, ever"
     <p>
         "Those few seconds in which parts of her mind came to a halt were not trivial in their effect on her. There was 
         trauma, loss, change; she was not now the same being she was before. Parts of her had died. 
-        Parts of her had become confused, out of order... She discovered, as many a living being had discovered, 
-        that rational decisions are far more easily made than carried out."
+        Parts of her had become confused, out of order; her heirarchy of attention was no longer under complete control.
+        She kept losing the focus of her atention, shifting to meaningless activities on worlds that meant nothing
+        to her; she began randomly twitching, spilling errors into hundreds of different systems.
+        She discovered, as many a living being had discovered, that rational decisions are far more easily made than carried out."
     </p>
     </blockquote>
 </figure>
@@ -99,16 +108,19 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
+    <img src="../assets/images/blog/blog-post/book-recs/phantom-tollbooth.jpg" alt="cover of The Phantom Tollbooth">
     <p>
-        Genre: <i>children's fantasy</i>
+        Genre: <i>children's fantasy, adventure</i>
     </p>
 </div>
 
 <figure>
     <blockquote cite="">
         <p>
-            "It's very much like your trying to reach infinity. You know that it's there, you just don't know where. 
-            But just because you can never reach it doesn't mean it's not worth looking for."
+            "'Don't be too sure,' said the child patiently, 'for one of the nicest things about mathematics, or anything else
+            you might care to learn, is that many of the things which can never be, often are. You see,' he went on, 'it's very 
+            much like your trying to reach Infinity. You know that it's there but you just don't know where - but 
+            just because you can never reach it doesn't mean it's not worth looking for." 
         </p>
     </blockquote>
 </figure>
@@ -127,6 +139,7 @@ description: "Objectively, the best books to read, ever"
 </h3>
 
 <div class="text-center">
+    <img src="../assets/images/blog/blog-post/book-recs/american-gods.jpg" alt="cover of American Gods">
     <p>
         Genre: <i>fantasy</i>
     </p>
@@ -135,8 +148,10 @@ description: "Objectively, the best books to read, ever"
 <figure>
     <blockquote cite="">
         <p>
-            "Gods die. And when they truly die, they are unmourned and unremembered.
-            Ideas are more difficut to kill than people, but they can be killed, in the end."
+            "'Tell him that we reprogrammed reality. Tell him that language is a virus and that religion is an 
+            operating system and that prayers are just so much spam... you should know that if we do kill you 
+            then we'll just delete you. You got that? One click and you're overwritten with random ones and zeros. 
+            Undelete is not an option.'"
         </p>
     </blockquote>
 </figure>
