posting book list

--- a/_posts/2023-01-28-the-bookworms-booklist.html
+++ b/_posts/2023-01-28-the-bookworms-booklist.html
@@ -1,8 +1,8 @@
 ---
 title: The Bookworm's Booklist 
 layout: post 
-date: 2023-01-27 15:52
-images: ../assets/images/blog/pen.png 
+date: 2023-01-28 03:38
+image: ../assets/images/blog/crown.png 
 headerImage: true 
 tags: 
 - reading
@@ -18,7 +18,7 @@ description: "Objectively, the best books to read, ever"
 
 <p>
     I've always loved reading. Librarians knew me by name, 
-    and my parents always knew what to get me for Christmas. I stayed up way too late, just trying to finish the next chapter. 
+    and my parents never ran out of Christmas present ideas. I stayed up way too late, just trying to finish the next chapter. 
     In the car at night, I stole lines from passing streetlights. 
 </p>
 
@@ -52,12 +52,11 @@ description: "Objectively, the best books to read, ever"
 </figure>
 
 <p>
-    <i>Bookworm's Commentary:</i>
     Running at 800+ pages, this visceral novel is more of a character study than anything else. 
     It follows the life of Jude, a broken and enigmatic man haunted by his past, and his circle of friends in 
     New York. Some view it as a masterpiece; others call it misery porn. I'm of the former opinion. 
-    It explores the nature of friendship, abuse, love, addiction, art, and what it means to be painfully human. 
-    It is the most beautiful book I've ever read, and also the most heartbreaking. Read at your own risk. 
+    It explores the nature of friendship, abuse, love, addiction, art, and what it means to be utterly human.
+    It is the most beautifully written book I've ever read, and also the most heartbreaking. Read at your own risk. 
 </p>
 
 <h3>
@@ -67,9 +66,33 @@ description: "Objectively, the best books to read, ever"
 <div class="text-center">
     <img src="../assets/images/blog/blog-post/book-recs/geb.jpg" alt="cover of Godel, Escher, and Bach">
     <p>
-        Genre: <i>nonfiction, philosophy, mathematics, cognitive science, consciousness</i>
+        Genre: <i>nonfiction, philosophy, mathematics, cognitive science</i>
     </p>
 </div>
+
+<figure>
+    <blockquote>
+        <p>
+            "Can all of reality be turned into a formal system? In a very broad sense, the answer might appear to be yes.
+            One could suggest, for instance, that reality is itself nothing but one very complicated formal system. Its symbols
+            do not move around on paper, but rather in a three-dimensional vacuumm; they are the elementary particles of which 
+            everything is composed. The 'typographical rules' are the laws of physics, which tell how, given the 
+            positions and velocities of all particles at a given instant, to modify them, resulting in a new set of 
+            positions and velocities belonging to the 'next' instance."
+        </p>
+    </blockquote>
+</figure>
+
+<p>
+    I bought this book as a souvenir from The Strand in NYC, and am only 100 pages in. It's difficult to describe the premise: 
+    roughly, how Gödelian loops in formal systems give way to some sort of awareness, animation, a "sense of self." 
+    I've discovered fugues and canons, axioms and theorems, recursion, paradoxes, isomorphisms, geometry, number theory. 
+    It's brilliantly written and encourages you to savor each concept: thumb through my copy to find post-its exploring the MU-puzzle, 
+    notes working through a formal system representing primality using hyphen-strings, or an airplane napkin reminding me to 
+    listen to Bach's <i>Contrapunctus</i>. 
+    It's by far the most intelligent novel I've ever enjoyed - anyone interested in math, consciousness, 
+    or philosophy should pick it up at least once. 
+</p>
 
 <h3>
     3. <i>Speaker for the Dead</i>, Orson Scott Card 
@@ -83,12 +106,12 @@ description: "Objectively, the best books to read, ever"
 </div>
 
 <figure>
-    <blockquote cite="">
+    <blockquote>
     <p>
         "Those few seconds in which parts of her mind came to a halt were not trivial in their effect on her. There was 
         trauma, loss, change; she was not now the same being she was before. Parts of her had died. 
-        Parts of her had become confused, out of order; her heirarchy of attention was no longer under complete control.
-        She kept losing the focus of her atention, shifting to meaningless activities on worlds that meant nothing
+        Parts of her had become confused, out of order; her hierarchy of attention was no longer under complete control.
+        She kept losing the focus of her attention, shifting to meaningless activities on worlds that meant nothing
         to her; she began randomly twitching, spilling errors into hundreds of different systems.
         She discovered, as many a living being had discovered, that rational decisions are far more easily made than carried out."
     </p>
@@ -96,10 +119,9 @@ description: "Objectively, the best books to read, ever"
 </figure>
 
 <p>
-    <i>Bookworm's Commentary:</i>
     I started this book as a sci-fi hater; in fact, the only reason I read it was because a friend recommended Ender's Game. 
     Ender's Game was alright, but I heard the sequel was better. Indeed, it was: I poured through the pages, 
-    entranced by Ender's journey to Lusitania. The mystery of the 'piggies', the descolada virus, and a sentient 
+    entranced by Ender's journey to Lusitania. The mystery of the "piggies," the descolada virus, and a sentient 
     super-powered AI capable of instantaneous communication across light-years? I've never been as hooked. 
 </p>
 
@@ -115,18 +137,17 @@ description: "Objectively, the best books to read, ever"
 </div>
 
 <figure>
-    <blockquote cite="">
+    <blockquote>
         <p>
             "'Don't be too sure,' said the child patiently, 'for one of the nicest things about mathematics, or anything else
             you might care to learn, is that many of the things which can never be, often are. You see,' he went on, 'it's very 
             much like your trying to reach Infinity. You know that it's there but you just don't know where - but 
-            just because you can never reach it doesn't mean it's not worth looking for." 
+            just because you can never reach it doesn't mean it's not worth looking for.'" 
         </p>
     </blockquote>
 </figure>
 
 <p>
-    <i>Bookworm's Commentary:</i>
     This book serves as a love letter to the pursuit of knowledge. Whenever things get difficult, I turn to this book and 
     rediscover the joy of learning. It stars Milo, a boy who "[regards] the process of seeking knowledge as the 
     greatest waste of time," and his journey to rescue the princesses Rhyme and Reason.  
@@ -146,7 +167,7 @@ description: "Objectively, the best books to read, ever"
 </div>
 
 <figure>
-    <blockquote cite="">
+    <blockquote>
         <p>
             "'Tell him that we reprogrammed reality. Tell him that language is a virus and that religion is an 
             operating system and that prayers are just so much spam... you should know that if we do kill you 
@@ -157,7 +178,6 @@ description: "Objectively, the best books to read, ever"
 </figure>
 
 <p>
-    <i>Bookworm's Commentary:</i>
     Shadow Moon, having just served his prison sentence, re-enters the world and finds his wife dead and a stranger 
     offering him a mysterious job. He is whisked across America, caught on the edge of a war between the Old Gods 
     and the New Gods.
@@ -166,3 +186,8 @@ description: "Objectively, the best books to read, ever"
     Gaiman captured 21 years of my feelings in a single novel. It's bittersweet and deliciously dark. 
 </p>
 
+<hr>
+
+<p>
+    Happy reading, kids! For best results: curl up in a blanket nest, pet a cat, and sip a warm drink. 
+</p>
