update phantom bio

--- a/_posts/2023-01-28-the-bookworms-booklist.html
+++ b/_posts/2023-01-28-the-bookworms-booklist.html
@@ -150,8 +150,8 @@ description: "Objectively, the best books to read, ever"
 
 <p>
     Or: a love letter to the pursuit of knowledge. Whenever things get difficult, I turn to this book and 
-    rediscover the joy of learning. It stars Milo, a boy who "[regards] the process of seeking knowledge as the 
-    greatest waste of time," and his journey to rescue the princesses Rhyme and Reason.  
+    rediscover the joy of learning. It stars Milo, a boy who considers the "process of seeking knowledge as the 
+    greatest waste of time," and his journey to the Lands Beyond to rescue the princesses Rhyme and Reason.  
     Clever and witty, this novel shines brighter the City of Illusions, sings sweeter than the Symphony of Color, and 
     will definitely bring you out of the Doldrums. 
 </p>
