--- a/about.html
+++ b/about.html
@@ -3,37 +3,33 @@ title: About
 layout: page
 ---
 <!-- ![Profile Image]({% if site.external-image %}{{ site.picture }}{% else %}{{ site.url }}/{{ site.picture }}{% endif %}) -->
-<div class="row" style="margin:3rem;">
-  <div class="col-sm-2 col-lg-4">
-  </div>
-  <div class="col-sm-10 col-lg-4">
-    <div class="text-center">
-      <img src="../assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
-    </div> 
-  <div class="text-center" style="line-height: 200%;">
-      <p class="fs-4">
-      Hi, I'm Kaylee. Welcome to my site.
-      </p>
-      <p>
-      I am a third year undergraduate student, studying Applied Mathematics and Computer Science at the Illinois Institute of Technology (IIT), 
-      located in Chicago, IL. 
-      </p>
-      <p>
-        I have always had an affinity for STEM; I grew up fiddling with puzzles and solving any equation I could get my hands on. 
-        Now, I explore the intersection of math and CS: algorithms and proofs, programming and logic, the concrete and the abstract.
-      </p>
-      <p>
-      I plan on graduating with a Bachelor's in Applied Mathematics and a Master's in Computer Science. 
-      I am currently doing research in applied statistics with
-      <a href="https://sites.google.com/iit.edu/lulukang/" target="_blank">
-        Professor Lulu Kang</a>.
-      At IIT, I am the co-treasurer for Women in STEM, a student council member for the College of Computing, and circ member at Galvin Library.
-      </p>
-      <p>
-        Feel free to click around, or send me an email. 
-      </p>
-  </div>
-  </div>
-  <div class="col-sm-2 col-lg-4">
-  </div>
-  </div>
+
+<div class="text-center">
+  <img src="../assets/images/about-beanie.jpg" class="img-thumbnail" alt="profile pic of me in a beanie" style="max-width: 70%; max-height: auto; margin-bottom: 3rem;">
+  
+  <p>
+    Hi, I'm Kaylee. Welcome to my site.
+  </p>
+  
+  <p>
+    I am a third year undergraduate student, studying Applied Mathematics and Computer Science at the Illinois Institute of Technology 
+    (IIT) in Chicago, IL. 
+  </p>
+
+  <p>
+    I have always had an affinity for STEM; I grew up fiddling with puzzles and solving any equation I could get my hands on. 
+    Now, I explore the union of math and CS: algorithms and proofs, programming and logic, the concrete and the abstract.
+  </p>
+  <p>
+    I plan on graduating with a Bachelor's in Applied Mathematics and a Master's in Computer Science. 
+    I am currently doing research in statistics with
+    <a href="https://sites.google.com/iit.edu/lulukang/" target="_blank">
+    Professor Lulu Kang</a>.
+    At IIT, I am the co-treasurer for Women in STEM, TA for the math department, and student council member for the College of Computing.
+  </p>
+
+  <p>
+    Feel free to click around, or send me an email. 
+  </p>
+  
+</div>
