--- a/activities.html
+++ b/activities.html
@@ -24,7 +24,7 @@ layout: page
 <br>
 <div class="text-center">
   <figure>
-    <figcaption>2023 Executive Board of Wistem</figcaption>   
+    <figcaption>2023 Executive Board of WiSTEM</figcaption>   
   </figure>
 </div>
 
