getting hover effects!!

--- a/_posts/2020-09-01-snapshots-may-2020-sept-2021.html
+++ b/_posts/2020-09-01-snapshots-may-2020-sept-2021.html
@@ -8,28 +8,33 @@ description: "Snapshots of a STEM student: May 2020 - Sept 2021"
 author: kjros
 images: 
 - image_path: ../assets/images/gallery/mexico-playa-sunrise-sienna.jpg
-  txt: sunrise
+  name: Mexico
+  location: Playa
+  alt: sunrise
+  date: Dec
+  desc: hello there! let's check how much wraparound we can get and if this works
 - image_path: ../assets/images/gallery/mexico-rock-hopping.jpg
 - image_path: ../assets/images/gallery/lakefront-trail-from-shedd.jpg
 - image_path: ../assets/images/gallery/madison-rainy-day-insta.jpg
 ---
-<!-- images:
-    - image_path: ../assets/images/gallery/mexico-plyaya-sunrise-sienna.jpg
-    title: sunrise with pink skies on seaside
-    - image_path: ../assets/images/gallery/mexico-rock-hopping.jpg
-    title: blue skies and rocks on the ocean
-    - image_path: ../assets/images/gallery/lakefront-trail-from-shedd.jpg
-    title: lakefront trail over lake michigan
-    - image_path: ../assets/images/gallery/madison-rainy-day-insta.jpg
-    title: streetview of a skyscraper -->
+<link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
-
-<!-- <ul class="photo-gallery">
-    {% for image in page.images %}
-    <li><img src="{{ image.image_path }}" alt="{{ image.title}}" /></li>
-    {% endfor %}
-</ul> 
-<p>hi</p> -->
 {% for image in page.images %}
-    <img src="{{ image.image_path }}" alt="{{ image.txt }}"/>
+        <div class="container">
+            <img src="{{ image.image_path }}" alt="{{ image.alt }}" class="image">
+            <div class="overlay">
+                <div class="text">
+                    <p style="color:white;">
+                        {{ image.name }}
+                    <br>
+                        {{ image.location }}
+                    <br>
+                        {{ image.date }}
+                    </p>
+                    <p style="color:white;">
+                        {{ image.desc }}
+                    </p>
+                </div>
+            </div>
+        </div>
 {% endfor %} 
