--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -6,7 +6,7 @@ headerImage: true
 tag: 
 - Toronto
 potpourri: true
-description: "Snapshots of a STEM student: June 2021 - March 2022"
+description: "Snapshots of a STEM student: My trip to Toronto in March 2022"
 author: kjros
 images: 
 - image_path: ../assets/images/gallery/pasaj-brunch-toronto.jpeg
@@ -68,7 +68,7 @@ images:
                     <p style="color:white;">
                         {{ image.name }}
                     <br>
-                        {{ image.location }}
+                        {{ image.loc }}
                     <br>
                         {{ image.date }}
                     </p>
