enabling nav links for potpourri posts

--- a/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
+++ b/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
@@ -4,6 +4,7 @@ layout: post
 image: ../assets/images/camera.png
 headerImage: true
 potpourri: true
+category: potpourri
 description: "Snapshots of a STEM student: June 2021 - March 2022"
 author: kjros
 images: 
