--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -6,6 +6,7 @@ headerImage: true
 tag: 
 - Toronto
 potpourri: true
+category: potpourri
 description: "Snapshots of a STEM student: My trip to Toronto in March 2022"
 author: kjros
 images: 
