--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -4,6 +4,7 @@ layout: post
 image: ../assets/images/camera.png
 headerImage: true
 potpourri: true
+category: potpourri
 description: "Snapshots of a STEM student: May 2020 - Sept 2021"
 author: kjros
 images:
