adding second location option for imgs

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -10,90 +10,91 @@ author: kjros
 images:
 - image_path: ../assets/images/gallery/wndr-infinity-room.jpg
   alt: infinity mirror room with mirror ornaments
-  name: Let's Survive Forever, WNDR Museum
-  location: West Loop, Chicago
+  name: Let's Survive Forever
+  loc: WNDR Museum
+  loc2: West Loop, Chicago
   date: April 18, 2021
   desc: An Infinity Mirror Room, by Japanese artist Yayoi Kusama. We were alloted exactly one minute in the exhibit. Pretty trippy!
 - image_path: ../assets/images/gallery/blue-leaves-west-loop.jpg
   alt: blue plant on the sidewalk
   name: Sidewalk Blues
-  location: West Loop, Chicago
+  loc: West Loop, Chicago
   date: April 18, 2021
 - image_path: ../assets/images/gallery/ramen-san-lunch-special.jpg
   alt: tray of tonkotsu ramen, salad, and karaage chicken
   name: RAMEN-SAN
-  location: River North, Chicago
+  loc: River North, Chicago
   date: April 18, 2021
   desc: My favorite ramen restaurant! Lunch special with salad, karaage chicken and tonkotsu ramen
 - image_path: ../assets/images/gallery/breakfast-haleys-bday.jpg
   alt: eggs benedict with canadian bacon and hashbrowns
   name: Hutch American Bistro
-  location: Lakeview, Chicago
+  loc: Lakeview, Chicago
   date: March 28, 2021
   desc: Stumbled upon a cute bistro along N. Clark. Eggs benedict with hashbrowns
 - image_path: ../assets/images/gallery/cuddle-bunny-gray-ghost.jpg
   alt: large gray bunny
   name: Cuddle Bunny
-  location: Lincoln Park, Chicago
+  loc: Lincoln Park, Chicago
   date: March 27, 2021
   desc: The best stress relief = cuddling bunnies for an hour!
 - image_path: ../assets/images/gallery/gelato-on-river.jpg
   alt: chocolate and strawberry gelato on a bridge over the chi river
   name: Gelato on the River
-  location: River North, Chicago
+  loc: River North, Chicago
   date: March 20, 2021
 - image_path: ../assets/images/gallery/st-patricks-river.jpg
   alt: chicago river dyed bright green for st patricks
   name: St. Patrick's Day River
-  location: River North, Chicago
+  loc: River North, Chicago
   date: March 13, 2021
   desc: Every year, Chicago dyes its river green for St. Patrick's Day. Don't worry, tour guides claim it's safe
 - image_path: ../assets/images/gallery/maggie-daley-skating.jpg
   alt: ice skating rink surrounded by skyscrapers
   name: Maggie Daley Park
-  location: Chicago Loop
+  loc: Chicago Loop
   date: February 9, 2021
   desc: Ice skating in the heart of downtown Chi
 - image_path: ../assets/images/gallery/shedd-aq-clownfish.jpg
   alt: two clownfish in the anenomes
   name: The Shedd Aquarium
-  location: Museum Campus, Chicago
+  loc: Museum Campus, Chicago
   date: February 7, 2021
   desc: Have you seen my son?!
 - image_path: ../assets/images/gallery/grand-lux-picatta.jpg
   alt: lemon chicken picatta with capers and mushrooms
   name: Grand Lux Cafe
-  location: Michigan Ave, Chicago
+  loc: Michigan Ave, Chicago
   date: February 2, 2021
   desc: Afternoon meal on the Mag Mile. Lemon chicken piccata with fresh parmesan
 - image_path: ../assets/images/gallery/macs-chipotle-wi-dells.jpg
   alt: skillet of mac with lime
   name: MACS
-  location: Wisconsin Dells, WI
+  loc: Wisconsin Dells, WI
   date: January 2, 2021
   desc: The best (and only) mac restaurant I've visited. Chipotle mac with chicken and lime
 - image_path: ../assets/images/gallery/mexico-playa-sunrise-sienna.jpg
   alt: sunrise with pink skies on the seaside
   name: Playa del Carmen 
-  location: Quintana Roo, Mexico
+  loc: Quintana Roo, Mexico
   date: December 19, 2020
   desc: Daybreak on the ocean
 - image_path: ../assets/images/gallery/mexico-rock-hopping.jpg
   alt: me on a rock along the blue ocean
   name: Playa del Carmen 
-  location: Quintana Roo, Mexico
+  loc: Quintana Roo, Mexico
   date: December 19, 2020
   desc: Rock-hopping on the Carribean Shore
 - image_path: ../assets/images/gallery/lakefront-trail-from-shedd.jpg
   alt: trail by blue lake michigan
   name: Lakefront Trail 
-  location: Museum Campus, Chicago 
+  loc: Museum Campus, Chicago 
   date: November 8, 2020
   desc: View of downtown Chi and Lake Michigan from the Shedd Aquarium
 - image_path: ../assets/images/gallery/madison-rainy-day-insta.jpg
   alt: streetview of a skyscraper
   name: West Madison Street
-  location: Chicago Loop 
+  loc: Chicago Loop 
   date: September 12, 2020 
   desc: Walking along Madison Street on a rainy day
 ---
@@ -107,7 +108,11 @@ images:
                     <p style="color:white;">
                         {{ image.name }}
                     <br>
-                        {{ image.location }}
+                        {{ image.loc }}
+                    {% if image.loc2 %}
+                        <br>
+                        {{ image.loc2 }}
+                    {% endif %}
                     <br>
                         {{ image.date }}
                     </p>
