--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -70,6 +70,10 @@ images:
                         {{ image.name }}
                     <br>
                         {{ image.loc }}
+                    {% if image.loc2 %}
+                        <br>
+                        {{ image.loc2 }}
+                    {% endif %}
                     <br>
                         {{ image.date }}
                     </p>
