potpourri for return after la

--- a/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
+++ b/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
@@ -60,6 +60,7 @@ images:
   name: Macalester College
   loc: St. Paul, MN
   date: October 30, 2021
+  desc: Autumn daze 
 - image_path: ../assets/images/gallery/garfield-conservatory-koi-fish.jpg
   alt: koi fish swimming in a pond
   name: Garfield Conservatory
