--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -2,7 +2,7 @@
 title: "August 2022: San Francisco"
 layout: post 
 image: ../assets/images/camera.png 
-hearderImage: true
+headerImage: true
 tag: 
 - San Francisco 
 potpourri: true 
