--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -56,6 +56,15 @@ images:
 
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
 
+<div class="text-center">
+  <p>
+    This, by far, is my most impulsive decision to date. Turns out, deciding to visit San Francisco and planning an entire weekend trip 
+    can easily be done 12 hours before your flight. It was everything I could have imagined, and more. 
+  </p>
+</div>
+
+<br>
+
 {% for image in page.images %}
         <div class="container">
             <img src="{{ image.image_path }}" alt="{{ image.alt }}" class="image">
