--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -10,43 +10,43 @@ category: potpourri
 description: "Snapshots of a STEM student: my weekend trip to San Francisco in 2022"
 author: kjros 
 images: 
-- image_path: ../assets/images/gallery/sf-painted-ladies.jpg
+- image_path: sf-painted-ladies.jpg
   alt: row of seven colorfully painted victorian houses 
   name: The Painted Ladies 
   loc: San Francisco, CA 
   date: August 14, 2022 
   desc: One thing I didn't expect when I visited SF was how colorful their houses were - bright greens, pastel pinks, and baby blues 
-- image_path: ../assets/images/gallery/sf-ube-latte-boba-guys.jpg 
+- image_path: sf-ube-latte-boba-guys.jpg 
   alt: purple and white ube boba latte 
   name: Boba Guys 
   loc: Japantown, San Francisco, CA 
   date: August 14, 2022
   desc: According to my favorite SF acquaintances, this place is VERY popular in the Bay Area. I can see why - this ube latte is in my top 5 boba drinks! 
-- image_path: ../assets/images/gallery/sf-pier-39-water.jpg 
+- image_path: sf-pier-39-water.jpg 
   alt: blue ocean and small dock with mountains in the background 
   name: Pier 39
   loc: San Francisco, CA 
   date: August 14, 2022
   desc: I think I could have stayed here forever, feeling the breeze of the ocean on my face 
-- image_path: ../assets/images/gallery/sf-tessellation.jpg 
+- image_path: sf-tessellation.jpg 
   alt: blue art sculptures on a mosaic path
   name: Trinity Place
   loc: Mid-Market, San Francisco, CA 
   date: August 14, 2022
   desc: Trippy looking sculptures and other such art 
-- image_path: ../assets/images/gallery/sf-union-square.jpg
+- image_path: sf-union-square.jpg
   alt: empty street with string lights and paper latterns strung 
   name: Union Square
   loc: San Francisco, CA 
   date: August 14, 2022
   desc: Wandering the streets in SF with nothing but pluots and a good playlist 
-- image_path: ../assets/images/gallery/golden-gate-park.jpg
+- image_path: golden-gate-park.jpg
   alt: lake and trees at a park 
   name: Golden Gate Park 
   loc: San Francisco, CA 
   date: August 13, 2022
   desc: Nice for reading on benches 
-- image_path: ../assets/images/gallery/sf-ppq-pho.jpg 
+- image_path: sf-ppq-pho.jpg 
   alt: bowl of steak pho with bean sprouts 
   name: Pho Phu Quoc 
   loc: San Francisco, CA 
@@ -67,7 +67,7 @@ images:
 
 {% for image in page.images %}
         <div class="container">
-            <img src="{{ image.image_path }}" alt="{{ image.alt }}" class="image">
+          <img src="../assets/images/gallery/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
             <div class="overlay">
                 <div class="text">
                     <p style="color:white;">
