--- a/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
+++ b/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
@@ -7,6 +7,7 @@ potpourri: true
 category: potpourri 
 description: "Snapshots of a STEM student: August 2022 - November 2022"
 author: kjros 
+playlist: 6AnUNX6KB19M2a6nObusG5?si=9232eae2c1644bc3
 images: 
 - image_path: la-creperie-croque-madame.jpg 
   alt: fries and ham and egg sandwich 
