adding spotify playlist links to posts

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -7,6 +7,7 @@ potpourri: true
 category: potpourri
 description: "Snapshots of a STEM student: May 2020 - Sept 2021"
 author: kjros
+playlist: 62NBeQ24Yg32LOZQdyejBy?si=bcae210ed8d0410d
 images:
 - image_path: wndr-infinity-room.jpg
   alt: infinity mirror room with mirror ornaments
