--- a/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
+++ b/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
@@ -7,6 +7,7 @@ potpourri: true
 category: potpourri
 description: "Snapshots of a STEM student: June 2021 - March 2022"
 author: kjros
+playlist: 13SdxBkhYyHhfbg0wWTh00?si=67d92efaf5054d3e
 images: 
 - image_path: golden-tubes-starbucks-reserve.jpg
   alt: large golden tubes running up five floors 
