--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -9,6 +9,7 @@ potpourri: true
 category: potpourri
 description: "Snapshots of a STEM student: My trip to Toronto in March 2022"
 author: kjros
+playlist: 0EH5qjYoLsg5WWBQu1XfAk?si=d98cd97c72054b83
 images: 
 - image_path: pasaj-brunch-toronto.jpeg
   alt: pancakes, matcha, and eggs benedict 
