--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -9,6 +9,7 @@ potpourri: true
 category: potpourri 
 description: "Snapshots of a STEM Student: My summer in LA in 2022"
 author: kjros 
+playlist: 56hgBMlG34OwDsbwDReXTd?si=126a3ece5e264df9
 images: 
 - image_path: sunny-blue-omusubi.jpg
   alt: two rice balls wrapped in nori 
