--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -9,6 +9,7 @@ potpourri: true
 category: potpourri 
 description: "Snapshots of a STEM student: my weekend trip to San Francisco in 2022"
 author: kjros 
+playlist: 7kBB5Uo5wBQTwHSs3Ar4Sv?si=0e42f02d194647fb
 images: 
 - image_path: sf-painted-ladies.jpg
   alt: row of seven colorfully painted victorian houses 
