fixing potpourri url styles

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -85,7 +85,7 @@ images:
   name: Playa del Carmen 
   loc: Quintana Roo, Mexico
   date: December 19, 2020
-  desc: Rock-hopping on the Carribean Shore
+  desc: Rock-hopping on the Caribbean Shore
 - image_path: lakefront-trail-from-shedd.jpg
   alt: trail by blue lake michigan
   name: Lakefront Trail 
@@ -100,6 +100,12 @@ images:
   desc: Walking along Madison Street on a rainy day
 ---
 <link rel="stylesheet" type="text/css" href="../gallery.css"/>
+
+<div class="text-center">
+  <p>
+    Escaping to the Caribbean and moving to Chicago
+  </p>
+</div>
 
 {% for image in page.images %}
         <div class="container">
