rearranging image folders

--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -73,8 +73,8 @@ images:
 
 {% for image in page.images %}
         <div class="container">
-            <img src="../assets/images/gallery/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
-            <div class="overlay">
+            <img src="../assets/images/gallery/toronto-22/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
+            <div class="overlay"> 
                 <div class="text">
                     <p style="color:white;">
                         {{ image.name }}
