--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -165,7 +165,7 @@ images:
 
 {% for image in page.images %}
         <div class="container">
-          <img src="../assets/images/gallery/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
+          <img src="../assets/images/gallery/la-22/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
             <div class="overlay">
                 <div class="text">
                     <p style="color:white;">
