--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -11,31 +11,31 @@ description: "Snapshots of a STEM student: my weekend trip to San Francisco in 2
 author: kjros 
 playlist: 7kBB5Uo5wBQTwHSs3Ar4Sv?si=0e42f02d194647fb
 images: 
-- image_path: sf-painted-ladies.jpg
+- image_path: painted-ladies.jpg
   alt: row of seven colorfully painted victorian houses 
   name: The Painted Ladies 
   loc: San Francisco, CA 
   date: August 14, 2022 
   desc: One thing I didn't expect when I visited SF was how colorful their houses were - bright greens, pastel pinks, and baby blues 
-- image_path: sf-ube-latte-boba-guys.jpg 
+- image_path: ube-latte-boba-guys.jpg 
   alt: purple and white ube boba latte 
   name: Boba Guys 
   loc: Japantown, San Francisco, CA 
   date: August 14, 2022
   desc: According to my favorite SF acquaintances, this place is VERY popular in the Bay Area. I can see why - this ube latte is in my top 5 boba drinks! 
-- image_path: sf-pier-39-water.jpg 
+- image_path: pier-39-water.jpg 
   alt: blue ocean and small dock with mountains in the background 
   name: Pier 39
   loc: San Francisco, CA 
   date: August 14, 2022
   desc: I think I could have stayed here forever, feeling the breeze of the ocean on my face 
-- image_path: sf-tessellation.jpg 
+- image_path: tessellation.jpg 
   alt: blue art sculptures on a mosaic path
   name: Trinity Place
   loc: Mid-Market, San Francisco, CA 
   date: August 14, 2022
   desc: Trippy looking sculptures and other such art 
-- image_path: sf-union-square.jpg
+- image_path: union-square.jpg
   alt: empty street with string lights and paper latterns strung 
   name: Union Square
   loc: San Francisco, CA 
@@ -47,7 +47,7 @@ images:
   loc: San Francisco, CA 
   date: August 13, 2022
   desc: Nice for reading on benches 
-- image_path: sf-ppq-pho.jpg 
+- image_path: ppq-pho.jpg 
   alt: bowl of steak pho with bean sprouts 
   name: Pho Phu Quoc 
   loc: San Francisco, CA 
@@ -68,7 +68,7 @@ images:
 
 {% for image in page.images %}
         <div class="container">
-          <img src="../assets/images/gallery/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
+          <img src="../assets/images/gallery/sf-22/{{ image.image_path }}" alt="{{ image.alt }}" class="image">
             <div class="overlay">
                 <div class="text">
                     <p style="color:white;">
