adding travel tag

--- a/_drafts/2022-12-15-snapshots-dec-2022-nyc.html
+++ b/_drafts/2022-12-15-snapshots-dec-2022-nyc.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true 
 tag: 
 - New York City
+- travel
 potpourri: true 
 category: potpourri 
 description: "Snapshots of a STEM Student: My winter visit to NYC in December 2022"
