--- a/_posts/2022-03-01-snapshots-mar-2022-toronto.html
+++ b/_posts/2022-03-01-snapshots-mar-2022-toronto.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true
 tag: 
 - Toronto
+- travel
 potpourri: true
 category: potpourri
 description: "Snapshots of a STEM student: My trip to Toronto in March 2022"
