--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true 
 tag: 
 - Los Angeles
+- travel
 potpourri: true 
 category: potpourri 
 description: "Snapshots of a STEM Student: My summer in LA in 2022"
