--- a/_posts/2022-08-01-snapshots-aug-2022-sf.html
+++ b/_posts/2022-08-01-snapshots-aug-2022-sf.html
@@ -5,6 +5,7 @@ image: ../assets/images/camera.png
 headerImage: true
 tag: 
 - San Francisco 
+- travel
 potpourri: true 
 category: potpourri 
 description: "Snapshots of a STEM student: my weekend trip to San Francisco in 2022"
