writing out street abbrev

--- a/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -65,7 +65,7 @@ images:
 - image_path: grand-lux-picatta.jpg
   alt: lemon chicken picatta with capers and mushrooms
   name: Grand Lux Cafe
-  loc: Michigan Ave, Chicago
+  loc: Michigan Avenue, Chicago
   date: February 2, 2021
   desc: Afternoon meal on the Mag Mile. Lemon chicken piccata with fresh parmesan
 - image_path: macs-chipotle-wi-dells.jpg
