--- a/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
+++ b/_posts/2021-06-01-snapshots-june-2021-mar-2022.html
@@ -76,7 +76,7 @@ images:
 - image_path: grand-lux-beignets.jpg 
   alt: beignets with powdered sugar
   name: Grand Lux Cafe 
-  loc: Michigan Ave, Chicago 
+  loc: Michigan Avenue, Chicago 
   date: August 24, 2021
   desc: That morning, I woke up from a dream where I ate beignets. Had to fulfill fate 
 - image_path: arch-st-louis.jpg 
