--- a/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/2022-06-01-snapshots-june-2022-aug-2022-la.html
@@ -17,7 +17,7 @@ images:
   name: Sunny Blue 
   loc: Santa Monica, Los Angeles, CA 
   date: August 6, 2022 
-  desc: Cute omusubi shop on Main St. Had miso beef and wafu curry with barley tea
+  desc: Cute omusubi shop on Main Street. Had miso beef and wafu curry with barley tea
 - image_path: blue-venice-beach.jpg
   alt: bright blue tides and white sand 
   name: Venice Beach 
