--- a/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
+++ b/_posts/2022-08-02-snapshots-aug-2022-nov-2022.html
@@ -86,7 +86,7 @@ images:
   desc: Picnic in the park 
 - image_path: chi-north-view-of-madison-sent-to-amit.jpg 
   alt: chi glass skyscrapers reflecting the river 
-  name: North View from Madison St. 
+  name: North View from Madison Street
   loc: Chicago Loop 
   date: August 27, 2022 
   desc: Back to crystal clarity 
